5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1715_3034.log
== TEST (2019-05-02 16:13:24) 
-- CODE:
from math import*
a = float(input())

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
else:
	d = "entrada invalida"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:48) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
else:
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:06) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
else:
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:13) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
else:
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:12) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:33) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:35) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:36) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:37) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:39) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:40) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:42) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:49) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) or (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:55) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) or (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:01) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) or (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:50) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:53) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:57) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:02) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:15) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:17) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:28) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)

	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:32) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) or (x <= 4)):
	d = a**(1/a)

	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) or (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:37) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)

	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:40) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((x > 0) and (x <= 4)):
	d = a**(1/a)

	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ((x > 0) and (x <= 4)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:02) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((a > 0) or (a <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:08) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/a))
elif (a == 0):
	d = 0
elif ((a > 0) or (a <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:36) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/n))
elif (a == 0):
	d = 0
elif ((a > 0) or (a <= 4)):
	d = a**(1/n)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = a**(1/n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:08) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/2))
elif (a == 0):
	d = 0
elif ((a > 0) or (a <= 4)):
	d = a**(1/a)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:21:17) 
-- CODE:
from math import*
a = float(input("a:"))

if ((a >= -4) and (a < 0)):
	d = abs(a**(1/2))
elif (a == 0):
	d = 0
elif ((a > 0) or (a <= 4)):
	d = a**(1/2)
elif((a > 4) or (a < -4)):
	d = "entrada invalida"
	
print(round(d,4))
-- EXECUTION TIME:
0.183147
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.9975
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.9975
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
